--- a/projects.qmd
+++ b/projects.qmd
@@ -6,43 +6,84 @@ listing:
   type: default
 ---
 
-Below is a selection of data science projects demonstrating my end-to-end capabilities, from raw data engineering to statistical modeling and stakeholder presentation.
+Below is a selection of data science projects demonstrating my end-to-end capabilities, from raw data engineering to statistical **modeling** and stakeholder presentation.
 
 ---
 
-## 1. Geospatial Solar Optimization Engine {#solar}
-**Tools:** Python, `pvlib`, Uber H3, Hexagonal Clustering, Pandas
+## 1. Credit Card Customer Segmentation 
+**Tools:** Pandas, NumPy, Matplotlib, Seaborn, Scikit-learn, Kneed
 **Status:** Ongoing Research
 
 ### The Challenge
-Optimizing solar panel placement in dense urban environments requires balancing irradiation data with spatial constraints. Standard grid models often fail to capture the nuances of irregular urban geometries.
+Credit card companies struggle to **personalise marketing** or **identify risk** within diverse, unlabelled datasets. The challenge was to uncover **natural customer groupings** using unsupervised learning to reveal hidden **behavioural patterns** and improve retention
 
 ### The Solution
-I developed a Python-based optimization engine focusing on the **Kyiv, Ukraine** region. By integrating the `pvlib` library for irradiance modeling with **Uber’s H3** library, I created a hexagonal grid system to identify high-efficiency clusters for photovoltaic installation.
+A full **unsupervised learning pipeline** was developed to discover meaningful customer segments. The approach included:
+
+* Applying multiple **clustering algorithms**
+* Identifying representative **customer profiles** for each segment
+
+This strategy ensured robust segmentation and deeper insight into customer behaviour.
 
 ### Key Technical Achievements
-* **Hexagonal Spatial Indexing:** Implemented Uber H3 to divide the target area into hexagonal cells, allowing for superior neighbor traversal and radius queries compared to traditional square grids.
-* **Irradiance Modeling:** Utilized `pvlib` to simulate clear-sky and actual irradiance based on historical weather data.
-* **Location Specificity:** Configured precise geospatial parameters for the Kyiv-Pechersk Lavra region to test model sensitivity.
+* Built a full clustering pipeline (K‑Means, DBSCAN, GMM, HCA) with robust **preprocessing** and **scaling**.
+* Identified **K‑Means** as the optimal model (Silhouette Score: 0.32), while detecting that DBSCAN and GMM failed to form distinct clusters on this dataset.
+* Evaluated models using **silhouette scores**, **inertia**, PCA **visualisations**, and the **Davies-Bouldin Index**.
+* Produced clear customer segments with actionable **business insights**.
 
 ### Code Snapshot
-*A snippet demonstrating the initialization of the location and model parameters:*
+*A snippet demonstrating the **initialization** of the location and model parameters:*
 
 ```python
-from pvlib.location import Location
-import pvlib
+
+#| code-summary: "View Hybrid PCA Code"
+from sklearn.decomposition import PCA
+from sklearn.preprocessing import StandardScaler
+import numpy as np
 import pandas as pd
 
-# Define specific model parameters for Kyiv region
-# Focusing on precise latitude/longitude for irradiation mapping
-location = Location(
-    latitude=50.4353, 
-    longitude=30.5572, 
-    tz='Europe/Kyiv', 
-    altitude=60, 
-    name="Kyiv-Pechersk Lavra"
-)
+# 1. Retain critical features, that are essential for risk profiling (Ensures interpretability)
+direct_features = ['ONEOFF_PURCHASES', 'BALANCE', 'PAYMENTS','CREDIT_LIMIT', 'CASH_ADVANCE']
+remaining_features = [col for col in df3.columns if col not in direct_features]
 
-# Fetching clear sky data for model calibration
-cs = location.get_clearsky(pd.date_range(start='2024-06-01', periods=24, freq='1H'))
-print(cs.head())
+# 2. Apply PCA only to the redundant features
+pca = PCA(n_components=6) # Retaining 95% variance
+principal_components = pca.fit_transform(scaled_remaining_features)
+
+# 3. Combine critical Features + PCA Components
+final_data = np.hstack([scaled_direct_features, principal_components])
+final_df = pd.DataFrame(final_data, columns=direct_features + [f'PC{i+1}' for i in range(6)])
+```
+
+---
+
+## 2. Global Rehabilitation Analysis 
+**Tools:** Power BI, SQL, DAX
+**Status:** Ongoing Research
+
+### The Challenge
+Global health systems lack clear, accessible insight into **rising rehabilitation needs**. Disease burden varies widely across regions and conditions, yet policymakers struggle to interpret complex DALY data and identify where services are most needed. The challenge was to turn **high‑dimensional global health metrics** into clear, trends,and find gaps in the system—through interactive, Power BI dashboards.
+
+### The Solution
+Full unsupervised learning pipeline to discover meaningful customer segments. The approach included:
+
+**Extracting and transforming data using SQL.**
+**Developing dynamic DAX measures for real-time analysis.**
+**Designing user-friendly dashboards for non-technical stakeholders.**
+
+This strategy ensured robust segmentation and deeper insight into customer behaviour.
+
+### Key Technical Achievements
+* **Transformed complex health datasets into an intuitive relational data model.**
+* **Implemented advanced DAX calculations to quantify disease burden across varying demographics.**
+* **Designed interactive visuals (maps, heatmaps) to highlight regional disparities.**
+* **Enabled stakeholders to drill into specific conditions and geographies instantly.**
+
+### Power BI Snapshot
+*Executive summary with KPIs*
+
+<object data="assets/Global_Rehabilitation_Analysis.pdf" type="application/pdf" width="100%" height="600px">
+    <p>Unable to display PDF file. <a href="assets/Global_Rehabilitation_Analysis.pdf">Download</a> instead.</p>
+</object>
+
+---
